= Core Framework

== 2.0.0
* Migrated to Java 11, i.e. an according Java Runtime is required to run jQAssistant.
+
NOTE: It is still possible to scan applications compiled with older Java versions.
* migrated `configuration` and `plugin` APIs to new `runtime` module
* Added a `key` attribute to each row in the XML report (`jqassistant-report.xml`) to allow matching results between subsequent analysis executions
* Added rule reports to the XML report (`jqassistant-report.xml`)
* Changed the reporting API for scripts to have explicit rows and columns

== 1.12.1
* Upgraded to AsciidoctorJ 2.5.7 and PlantUML 1.2022.12

== 1.12.0
* Added support for configuration via YAML files, environment variables and system properties based on Eclipse Microprofile config mechanism
* Added support for plugin provisioning based on a given configuration via Maven repositories (including dependency resolution)
* Improved the state of an executed rule as `warning` or `failure` to generated reports (e.g. XML)
* Added support for the state `warning` in the XML report
* Removed deprecated source locations from XML report
* Added a message during analysis for concepts which are skipped because they have already been applied in a previous execution
* Fixed an issue where diagram reports (e.g. GraphML) failed with an exception (`"Element type not supported:"`)
* Add support for Elk layout mechanism for use in PlantUML diagrams
* Added a module `test` providing core test infrastructure for plugins. Matchers located in the `test-jar` artifacts of `store` and `analysis` have been moved to this module, as well as `com.buschmais.jqassistant.core.test.plugin.AbstractPluginIT`.
+
NOTE: Plugins must declare `com.buschmais.jqassistant.core:test` as a test-scoped dependency.
* Upgraded to PlantUML 1.2022.6, AsciidoctorJ 2.5.4, AsciidoctorJ diagram 2.2.3 and JRuby 9.3.6.0
+
TIP: If loading Asciidoc files turns out to be very slow on Windows systems try to specify the system property