@@ -4,7 +4,6 @@ import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.List;
-import java.util.Optional;
 
 import com.buschmais.jqassistant.core.runtime.api.configuration.Configuration;
 import com.buschmais.jqassistant.core.runtime.api.configuration.ConfigurationLoader;
@@ -16,8 +15,8 @@ import io.smallrye.config.SysPropConfigSource;
 import org.junit.jupiter.api.Test;
 import org.junitpioneer.jupiter.SetEnvironmentVariable;
 
+import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
-import static java.util.Optional.empty;
 import static java.util.Optional.of;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -26,6 +25,8 @@ import static org.assertj.core.api.Assertions.assertThat;
  */
 class ConfigurationLoaderImplTest {
 
+    public static final File USER_HOME = new File("src/test/resources/userhome");
+
     public static final File WORKING_DIRECTORY = new File("src/test/resources/working directory");
 
     /**
@@ -33,7 +34,7 @@ class ConfigurationLoaderImplTest {
      */
     @Test
     void loadFromDefaultConfigLocations() throws URISyntaxException {
-        Configuration configuration = getConfiguration(empty());
+        Configuration configuration = getConfiguration(emptyList());
 
         assertThat(configuration).isNotNull();
 
@@ -48,6 +49,8 @@ class ConfigurationLoaderImplTest {
         Scan scan = configuration.scan();
         assertThat(scan).isNotNull();
         assertThat(scan.continueOnError()).isEqualTo(true);
+        assertThat(scan.properties().get("user-value")).isEqualTo("default");
+        assertThat(scan.properties().get("overwritten-user-value")).isEqualTo("overwritten");
 
         Store store = configuration.store();
         assertThat(store).isNotNull();
@@ -60,7 +63,7 @@ class ConfigurationLoaderImplTest {
      */
     @Test
     void loadFromConfigLocation() {
-        Configuration configuration = getConfiguration(of(singletonList(".jqassistant/scan/scan.yaml")));
+        Configuration configuration = getConfiguration(singletonList(".jqassistant/scan/scan.yaml"));
 
         assertThat(configuration).isNotNull();
 
@@ -70,6 +73,8 @@ class ConfigurationLoaderImplTest {
         Scan scan = configuration.scan();
         assertThat(scan).isNotNull();
         assertThat(scan.continueOnError()).isEqualTo(true);
+        assertThat(scan.properties().get("user-value")).isEqualTo("default");
+        assertThat(scan.properties().get("overwritten-user-value")).isEqualTo("overwritten");
 
         Store store = configuration.store();
         assertThat(store).isNotNull();
@@ -79,7 +84,7 @@ class ConfigurationLoaderImplTest {
     @Test
     @SetEnvironmentVariable(key = "jqassistant_scan_continue_on_error", value = "false")
     void overrideFromEnvVariable() {
-        Configuration configuration = getConfiguration(empty());
+        Configuration configuration = getConfiguration(emptyList());
         assertThat(configuration.scan()
             .continueOnError()).isEqualTo(false);
     }
@@ -97,7 +102,7 @@ class ConfigurationLoaderImplTest {
     private void overrideFromSystemProperty(String continueOnError) {
         System.setProperty(continueOnError, "false");
         try {
-            Configuration configuration = getConfiguration(empty());
+            Configuration configuration = getConfiguration(emptyList());
             assertThat(configuration.scan()
                 .continueOnError()).isEqualTo(false);
         } finally {
@@ -105,8 +110,8 @@ class ConfigurationLoaderImplTest {
         }
     }
 
-    private Configuration getConfiguration(Optional<List<String>> configLocations) {
-        ConfigurationLoader configurationLoader = new ConfigurationLoaderImpl(WORKING_DIRECTORY, configLocations);
+    private Configuration getConfiguration(List<String> configLocations) {
+        ConfigurationLoader configurationLoader = new ConfigurationLoaderImpl(USER_HOME, WORKING_DIRECTORY, configLocations);
         return configurationLoader.load(Configuration.class, new SysPropConfigSource());
     }
 }
