@@ -1,0 +1,5 @@
+jqassistant:
+  scan:
+    properties:
+      overwritten-user-value: "default"
+      user-value: "default"
